<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermEditActivity"
    tools:showIn="@layout/activity_term_edit">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiTermTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvTermTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/term_title" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@id/btnStartDate"
        app:layout_constraintLeft_toRightOf="@id/tvStartLabel"
        app:layout_constraintStart_toEndOf="@id/tvStartLabel" />

    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setStartDate"
        android:text="@string/set_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tvStartDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiTermTitle" />

    <TextView
        android:id="@+id/tvEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEndDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEndDate"
        app:layout_constraintLeft_toRightOf="@id/tvEndLabel"
        app:layout_constraintStart_toEndOf="@id/tvEndLabel" />

    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/set_end"
        android:onClick="setEndDate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartDate" />
</android.support.constraint.ConstraintLayout>