<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CourseEditActivity"
    tools:showIn="@layout/activity_course_edit">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/course_title" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvStartLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnStartDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvStartDate"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnStartDate"
        app:layout_constraintLeft_toRightOf="@id/tvStartLabel"
        app:layout_constraintStart_toEndOf="@id/tvStartLabel" />

    <Button
        android:id="@+id/btnStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="setStartDate"
        android:text="@string/set_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiTitle" />

    <TextView
        android:id="@+id/tvEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEndDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEndDate"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnEndDate"
        app:layout_constraintLeft_toRightOf="@id/tvEndLabel"
        app:layout_constraintStart_toEndOf="@id/tvEndLabel" />

    <Button
        android:id="@+id/btnEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setEndDate"
        android:text="@string/set_end"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartDate" />

    <TextView
        android:id="@+id/tvStatusLabel"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEndDate" />

    <Spinner
        android:id="@+id/sStatus"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEndDate" />

    <TextView
        android:id="@+id/tvMentorLabel"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mentor"
        app:layout_constraintTop_toBottomOf="@+id/tvStatusLabel" />

    <TextView
        android:id="@+id/tvMentorNameLabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name:"
        app:layout_constraintTop_toBottomOf="@+id/tvMentorLabel" />

    <TextView
        android:id="@+id/tvMentorName"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMentorNameLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvMentorNameLabel"
        app:layout_constraintStart_toEndOf="@+id/tvMentorNameLabel" />

    <Button
        android:id="@+id/btnMentorAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/general_margin"
        android:text="Add Mentor"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMentorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvMentorPhoneLabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone:"
        app:layout_constraintTop_toBottomOf="@+id/tvMentorNameLabel" />

    <TextView
        android:id="@+id/tvMentorPhone"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMentorPhoneLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvMentorPhoneLabel"
        app:layout_constraintStart_toEndOf="@+id/tvMentorPhoneLabel" />

    <TextView
        android:id="@+id/tvMentorEmailLabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMentorPhoneLabel" />

    <TextView
        android:id="@+id/tvMentorEmail"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMentorEmailLabel"
        app:layout_constraintLeft_toRightOf="@+id/tvMentorEmailLabel" />

    <TextView
        android:id="@+id/tvNoteslabel"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Notes: "
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMentorEmailLabel" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginLeft="@dimen/general_margin"
        android:layout_marginRight="@dimen/general_margin"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:gravity="top"
        android:hint="Add notes here."
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteslabel" />

</android.support.constraint.ConstraintLayout>